--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^3.0.0"
+    "vite": "3.0.3"
   },
   "dependencies": {
     "stylus": "^0.58.1"
